--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
-node_modules/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-*.json
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
